# url-shortener-project

./: .env  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: a005d060b88d_create_url_table.py
app/: dependencies.py  settings.py  utils.py
app/api/: url_router.py
app/models/: url.py
app/repositories/: url_repository.py
app/schemas/: url.py
app/services/: url_service.py
